--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <i class="bx bxl-linkedin"></i>
         </a>        
           <a href="https://github.com/ittsl16" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://drive.google.com/file/d/1brMO7jUxZiSZzum_blxJXP7bq5ZWqXfp/view?usp=sharing" class="cv" target="_blank"><i class="bx bx-file"></i></a>
+          <a href="assets/img/portfolio/ITZEL PÉREZ XOCHITEMO CV.pdf" class="cv" target="_blank"><i class="bx bx-file"></i></a>
         </div>
       </div>  
 
