--- a/index.html
+++ b/index.html
@@ -482,6 +482,16 @@
         </div>
       </div>
     </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+      <div class="portfolio-wrap">
+        <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
+        <div class="portfolio-links">
+          <a href="assets/img/portfolio/portfolio-11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App movil"><i class="bx bx-plus"></i></a>
+          
+        </div>
+      </div>
+    </div>
           
     </section><!-- End Portfolio Section -->
 
