--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Professional</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>  
-                    <a href="mailto:ittzeloff09@gmail.com"><span>ittzeloff09@gmail.com</span></a>  
+                    <a href="mailto:ittzeloff09@gmail.com"><span>perezittzell@gmail.com</span></a>  
                   </li>                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
