--- a/index.html
+++ b/index.html
@@ -522,6 +522,28 @@
         </div>
       </div>
     </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+      <div class="portfolio-wrap">
+        <img src="assets/img/portfolio/portfolio-18.png" class="img-fluid" alt="">
+        <div class="portfolio-links">
+          <a href="assets/img/portfolio/portfolio-18.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gestión de Proyectos y Fundamentos de
+          metodología Agile
+          "><i class="bx bx-plus"></i></a>
+    
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+      <div class="portfolio-wrap">
+        <img src="assets/img/portfolio/portfolio-19.png" class="img-fluid" alt="">
+        <div class="portfolio-links">
+          <a href="assets/img/portfolio/portfolio-19.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Internet de las Cosas"><i class="bx bx-plus"></i></a>
+    
+        </div>
+      </div>
+    </div>
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
