--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Av.Benito Juarez #4, San Pedro Xalcaltzinco,Tlaxcala</p>
+                <p>Tlaxcala, México</p>
               </div>
 
               <div class="email">
